--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,24 @@
 name: Build
 
-on: [ push ]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout sources
-      uses: actions/checkout@v4
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v3
-    - name: Build with Gradle
-      run: ./gradlew build jacocoTestReport
+      - name: Checkout sources
+        uses: actions/checkout@v4
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+
+      - name: Build with Gradle
+        run: ./gradlew build jacocoTestReport
+
+      - name: Extract SonarQube ZIP
+        run: unzip sonarqube/sonar-application/build/distributions/sonar-application-25.2-SNAPSHOT.zip -d sonarqube/sonar-application/build/distributions/
+
+      - name: Start SonarQube
+        run: |
+          chmod +x sonarqube/sonar-application/build/distributions/sonar-application-25.2-SNAPSHOT/bin/linux-x86-64/sonar.sh
+          sonarqube/sonar-application/build/distributions/sonar-application-25.2-SNAPSHOT/bin/linux-x86-64/sonar.sh start
