--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build jacocoTestReport
 
-      - name: Debug: List Build Directory
+      - name: Debug List Build Directory
         run: ls -R sonarqube/sonar-application/build/distributions/
 
       - name: Extract SonarQube ZIP
